RESOLVED FIXED 59354
Fix strict OwnPtr issues in Media*.cpp
https://bugs.webkit.org/show_bug.cgi?id=59354
Summary Fix strict OwnPtr issues in Media*.cpp
Adam Barth
Reported 2011-04-25 15:21:39 PDT
Fix strict OwnPtr issues in Media*.cpp
Attachments
Patch (1.93 KB, patch)
2011-04-25 15:22 PDT, Adam Barth
levin: review+
Adam Barth
Comment 1 2011-04-25 15:22:24 PDT
Adam Barth
Comment 2 2011-04-25 15:28:41 PDT
WebKit Review Bot
Comment 3 2011-04-25 15:43:17 PDT
http://trac.webkit.org/changeset/84806 might have broken Windows Release (Build), Windows Debug (Build), and Chromium Linux Release
Note You need to log in before you can comment on or make changes to this bug.