2011-04-25  Adam Barth  <abarth@webkit.org>

Reviewed by David Levin.

        Fix strict OwnPtr issues in Media*.cpp
        https://bugs.webkit.org/show_bug.cgi?id=59354

        There's still a tricky case in MediaPlayer.cpp, but we'll worry about
        that later.

        * css/MediaQueryMatcher.cpp:
        (WebCore::MediaQueryMatcher::addListener):
        * dom/Document.cpp:
        * platform/graphics/MediaPlayer.cpp:
        (WebCore::createNullMediaPlayer):


Canonical link: https://commits.webkit.org/74533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84806 268f45cc-cd09-0410-ab3c-d52691b4dbfc